Fix suggestion box being too wide

--- a/BuddyBot/src/Site.css
+++ b/BuddyBot/src/Site.css
@@ -137,4 +137,5 @@ footer {
 #webchat, #webchat > * {
         height: 100%;
         width: 100%;
-}
+        max-width: 450px;
+ }
